--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false # Don't cancel all jobs if one Python version fails
       matrix:
         # Test against the minimum supported version and recent versions
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - name: Checkout repository
